Optivet/Content/Site.css
html {
    background-color: #e2e2e2;
    margin: 0;
    padding: 0;
}

body {
    background-color: #F8F8F8 ;
    color: #333;
    font-size: .85em;
    font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
    margin: 0;
    padding-top: 20px;
}

a {
    color: #333;
    outline: none;
    padding-left: 3px;
    padding-right: 3px;
    text-decoration: underline;
}

    a:link, a:visited,
    a:active, a:hover {
        color: #333;
    }

    a:hover {
        background-color: #c7d1d6;
    }

header, footer, hgroup,
nav, section {
    display: block;
}

mark {
    background-color: #a6dbed;
    padding-left: 5px;
    padding-right: 5px;
}

.float-left {
    float: left;
}

.float-right {
    float: right;
}

.clear-fix:after {
    content: ".";
    clear: both;
    display: block;
    height: 0;
    visibility: hidden;
}

h1, h2, h3,
h4, h5, h6 {
    color: #000;
    margin-bottom: 0;
    padding-bottom: 0;
}

h1 {
    font-size: 2em;
}

h2 {
    font-size: 1.75em;
}

h3 {
    font-size: 1.2em;
}

h4 {
    font-size: 1.1em;
}

h5, h6 {
    font-size: 1em;
}

    h5 a:link, h5 a:visited, h5 a:active {
        padding: 0;
        text-decoration: none;
    }


.capitalLetter {
    text-transform:uppercase;
    font-size:1.5em;
    font-style:italic;
}

ul#aboutUl {
    list-style-image:url("../Images/pawBullet.png");
}

.bodyText {
    font-family: "Myriad Pro";
    text-align:justify;
}

h2.aboutH2 { font-size: 30px; letter-spacing: -1px; color: #0066cc; text-transform: uppercase; text-shadow: 1px 1px 0 #000; margin: 10px 0 24px; text-align: center; line-height: 50px; }


blockquote { background-image: url(http://typespiration.com/wp-content/themes/typespiration/images/quote.png); background-position: 10px 10%; background-repeat: no-repeat no-repeat; padding: 100px 0 0 0; }


.aboutQuoteFont {
    font-size: 1.5em; letter-spacing: -2px; color: #0066cc; text-transform: uppercase; text-shadow: 1px 1px 0 #000; margin: 20px 0 24px; text-align: center; line-height: 50px;
}

#byQuote {
 color: #adadad; font-size: 25px; text-decoration: none; float: right; font-family: 'Libre Baskerville', serif; 
}


h3.aboutH3 {
    padding-top:150px;
    color: #0066cc;
    font-size:1.25em;

}

.aboutH3Bio {
    color: #0066cc;
    font-size:1.25em;
        text-align:center;
}


h1.centeredHeading {
    color: #0066cc;
    text-align:center;
    font-size:3em;
}

h1.normalHeading {
    color: #0066cc;
    text-align:start;
    font-size:3em;
}

h2.normalHeading {
    color: #0066cc;
    text-align:start;
    font-size:2em;
}

 h1.bodyText  {
    color: #0066cc;
    text-align:center;
    font-size:3em;
}

p.bodyTextSmall {
        font-family: "Myriad Pro";
        text-align:justify;
}

 hr.bodyText  {
    border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
    margin-bottom:10px;
}

p.bodyText {
    font-size:1.3em;
}

p.bodyTextPadding {
    font-size:1.3em;
    padding-top:20px;
    padding-bottom:20px;
}

ul.bodyText {
    font-size:1.3em;
    line-height:2;
}

.bio {
    background:#e2e2e2;
    padding:5px;
    border-radius:15px;
    width:200px;
    margin-top:18px;
        box-shadow:0px 0px 10px 10px rgba(0,0,0,0.1);
}

#bioImage {
   margin-left:auto;
   margin-right:auto;
   display:block;

}

.contact {
    width:200px;
    float:left;
}

.contactInfo {
    padding-left:40px;
    margin: 0px;
}

.contactInfoNoPadding {
}

.fontAwesomeFloatLeft {
    float:left;
}

.fontAwesomeNav {
    float:left;
    padding-top:10px;
    padding-left:2px;
}

.contactForm {
    width:700px;
    float:right;
}


.navLinksInfo {
    font-size:1.5em;
    text-decoration:none;
}

a.navLinksInfo:hover {
    text-decoration:none;
    text-shadow: 5px 5px 5px #999;
    background:none;

}

a.returnTop {
    background:url("../Images/pawBullet.png");
    width:250px;
    height:250px;
    display:block;
}

.returnTop {
        width:250px;
    height:250px;
}

.customOrderedList {
    margin-left: 0;
    padding-right: 0;
    list-style-type: none;
}

.customOrderedList li {
    counter-increment: step-counter;
    padding-bottom:20px;
}

.customOrderedList li::before {
    content: counter(step-counter);
    margin-right: 5px;
    font-size: 80%;
    background-color: #0066cc;
    color: white;
    font-weight: bold;
    padding: 3px 8px;
    border-radius: 3px;
}


/*----- Accordion -----*/
.accordion, .accordion * {
    -webkit-box-sizing:border-box; 
    -moz-box-sizing:border-box; 
    box-sizing:border-box;
}
 
.accordion {
    overflow:hidden;
    box-shadow:0px 0px 8px 8px rgba(0,0,0,0.1);
    border-radius:3px;
        border-radius:25px;
}
 
/*----- Section Titles -----*/
.accordion-section-title {
    width:100%;
    padding:15px;
    display:inline-block;
    border-bottom:1px solid #1a1a1a;
    transition:all linear 0.15s;
    /* Type */
    font-size:1.200em;
    text-shadow:0px 1px 0px #1a1a1a;
    text-decoration:none;
    border-radius:25px;
    
}

a.accordion-section-title {

}
 
.accordion-section-title.active, .accordion-section-title:hover {
    background:#0066cc;
    /* Type */
    text-decoration:none;
    color:#F8F8F8;
}
 
.accordion-section:last-child .accordion-section-title {
    border-bottom:none;
}

.accordionText {
    text-align:justify;
}

 
/*----- Section Content -----*/
.accordion-section-content {
    padding:15px;
    display:none;
}
/* main layout
----------------------------------------------------------*/
.content-wrapper {
    margin: 0 auto;
    max-width: 960px;
}

.content-wrapperContact {
    margin: 0 auto;
}

#body {
    background-color: #F8F8F8;
    clear: both;
    padding-bottom: 35px;
}

    .main-content {
        /*background: url("../Images/accent.png") no-repeat; */
        padding-left: 10px;
        padding-top: 10px;
    }

    .featured + .main-content {
     /* background: url("../Images/heroAccent.png") no-repeat; */   
    }
/* ... */

